updated configs on new resources so far
